fix main content top margin on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,7 @@ h1,h2,h3,h4,h5,h6
     display: block;
     margin-left: 2%;
     margin-right: 2%;
+    margin-top: 15px;
 }
 
 .body-container p {
